--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "dev": "node_modules/.bin/ng serve --host $IP --port $PORT root_assets --disableHostCheck=true --public-host=https://$C9_PROJECT-$C9_USER.c9users.io",
-    "build": "node_modules/.bin/ng build --aot && cp src/root_assets/* dist/ -v -f -r",
-    "test": "ng test",
+    "dev": "node_modules/.bin/webpack-dev-server --host $IP --port $PORT --disableHostCheck=true",
+    "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "protractor ./protractor.conf.js",
+    "build": "node_modules/.bin/webpack && cp src/root_assets/* dist/ -v -f -r",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,12 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "l": "^0.6.0",
+    "pug-ng-html-loader": "^1.0.10",
+    "pug-plugin-ng": "0.0.2",
     "rxjs": "^5.5.2",
+    "webpack": "~3.8.1",
+    "webpack-dev-server": "~2.9.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -44,6 +50,26 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "autoprefixer": "^6.5.3",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.29.0",
+    "less-loader": "^4.0.5",
+    "postcss-loader": "^1.3.3",
+    "postcss-url": "^5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^3.0.1",
+    "url-loader": "^0.6.2",
+    "circular-dependency-plugin": "^3.0.0",
+    "webpack-concat-plugin": "1.4.0",
+    "copy-webpack-plugin": "^4.1.1",
+    "uglifyjs-webpack-plugin": "1.0.0"
   }
 }
