--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "rxjs": "^5.5.2",
     "webpack": "~3.8.1",
     "webpack-dev-server": "~2.9.3",
-    "zone.js": "^0.8.14"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.14",
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
