--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "autoprefixer": "^6.5.3",
+    "breakpoint-sass": "^2.7.1",
     "circular-dependency-plugin": "^3.0.0",
     "codelyzer": "~3.2.0",
     "copy-webpack-plugin": "^4.1.1",
