--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "l": "^0.6.0",
     "less-loader": "^4.0.5",
+    "modularscale-sass": "3.0.3",
     "postcss-loader": "^1.3.3",
     "postcss-url": "^5.1.2",
     "protractor": "~5.1.2",
