--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^1.1.5",
+    "font-awesome-sass": "^4.7.0",
     "foundation-sites": "6.4.4-rc1",
     "html-webpack-plugin": "^2.29.0",
     "istanbul-instrumenter-loader": "^2.0.0",
