--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
-    "build": "node_modules/.bin/webpack --quiet",
+    "build": "node_modules/.bin/webpack --env=production",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
   },
   "private": true,
