--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "node": "9.1.0"
   },
   "scripts": {
-    "ng": "ng",
-    "dev": "node_modules/.bin/webpack-dev-server --host $IP --port $PORT --disableHostCheck=true",
-    "test": "karma start ./karma.conf.js",
-    "lint": "ng lint",
-    "e2e": "protractor ./protractor.conf.js",
-    "build": "node_modules/.bin/webpack --env=development",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
+    "prestart": "rimraf dist .fusebox && cpx ./src/index.html ./dist/",
+    "dev": "npm run prestart && node ./fuse.js",
+    "build": "npm run prestart && node ./fuse.js prod",
+    "test": "cross-env TS_NODE_PROJECT=./src/tsconfig.mocha.json mocha --opts ./test/mocha.travis.opts",
+    "test:auto": "cross-env TS_NODE_PROJECT=./src/tsconfig.mocha.json mocha --opts ./test/mocha.opts -G",
+    "coverage": "cross-env TS_NODE_PROJECT=./src/tsconfig.mocha.json nyc mocha --opts ./test/mocha.coverage.opts -G"
   },
   "private": true,
   "dependencies": {
@@ -28,25 +27,39 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@covalent/core": "^1.0.0-beta.4",
+    "@covalent/http": "^1.0.0-beta.4",
+    "@types/chai": "^3.5.2",
+    "@types/core-js": "^0.9.41",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/lodash": "^4.14.64",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.21",
+    "@types/sinon": "^2.2.2",
+    "angular-in-memory-web-api": "0.3.2",
     "autoprefixer": "^6.5.3",
     "breakpoint-sass": "^2.7.1",
+    "chai": "^3.5.0",
     "circular-dependency-plugin": "^3.0.0",
     "codelyzer": "~3.2.0",
     "copy-webpack-plugin": "^4.1.1",
     "core-js": "^2.4.1",
+    "cpx": "^1.5.0",
+    "cross-env": "^5.0.0",
     "css-loader": "^0.28.1",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^1.1.5",
     "font-awesome-sass": "^4.7.0",
     "foundation-sites": "6.4.4-rc1",
+    "fuse-box": "^2.2.1-beta.4",
     "html-webpack-plugin": "^2.29.0",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "jsdom": "^10.1.0",
+    "jsdom-no-contextify": "^3.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
@@ -55,26 +68,60 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "l": "^0.6.0",
     "less-loader": "^4.0.5",
+    "mocha": "^3.4.1",
     "modularscale-sass": "3.0.3",
+    "ng2-fused": "^0.5.1",
+    "node-sass": "^4.5.3",
+    "nyc": "^10.3.2",
     "postcss-loader": "^1.3.3",
     "postcss-url": "^5.1.2",
     "protractor": "~5.1.2",
     "pug-ng-html-loader": "^1.0.10",
     "pug-plugin-ng": "0.0.2",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
     "rxjs": "^5.5.2",
     "sass-loader": "^6.0.3",
+    "sinon": "^2.2.0",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.1",
-    "ts-node": "~3.2.0",
+    "ts-node": "^3.0.4",
+    "tslib": "^1.8.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2",
+    "uglify-js": "^3.0.15",
     "uglifyjs-webpack-plugin": "1.0.0",
     "url-loader": "^0.6.2",
     "webpack": "~3.8.1",
     "webpack-concat-plugin": "1.4.0",
     "webpack-dev-server": "~2.9.3",
     "zone.js": "^0.8.14"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "src/**/*.spec.ts",
+      "src/**/*.module.ts",
+      "node_modules/",
+      "src/**/main.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "html",
+      "text-summary",
+      "text",
+      "lcov"
+    ],
+    "all": true,
+    "sourceMap": true,
+    "instrument": true
   }
 }
