--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "scripts": {
     "ng": "ng",
-    "dev": "node_modules/.bin/webpack-dev-server --host $IP --port $PORT --disableHostCheck=true",
-    "test": "karma start ./karma.conf.js",
+    "dev": "npm run pug_w & node_modules/.bin/ng serve --host $IP --port $PORT --disableHostCheck=true --public-host=https://$C9_PROJECT-$C9_USER.c9users.io",
+    "build": "npm run pug && node_modules/.bin/ng build --aot",
+    "pug": "node_modules/.bin/pug src/app -P",
+    "pug_w": "node_modules/.bin/pug src/app -P -w",
+    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "protractor ./protractor.conf.js",
-    "build": "./node_modules/.bin/webpack --progress --colors --config ./webpack.config.js --bail",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -59,6 +60,7 @@
     "postcss-loader": "^1.3.3",
     "postcss-url": "^5.1.2",
     "protractor": "~5.1.2",
+    "pug-cli": "^1.0.0-alpha6",
     "pug-ng-html-loader": "^1.0.10",
     "pug-plugin-ng": "0.0.2",
     "raw-loader": "^0.5.1",
