--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "ng": "ng",
     "dev": "npm run pug_w & node_modules/.bin/ng serve --host $IP --port $PORT --disableHostCheck=true --public-host=https://$C9_PROJECT-$C9_USER.c9users.io",
-    "build": "npm run pug && node_modules/.bin/ng build --aot",
+    "build": "npm run pug && node_modules/.bin/ng build --aot -prod",
     "pug": "node_modules/.bin/pug src/app -P",
     "pug_w": "node_modules/.bin/pug src/app -P -w",
     "test": "ng test",
