--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pug_w": "node_modules/.bin/pug src/app -P -w",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "nvmrc-check --node $(cat .nvmrc)"
   },
   "private": true,
   "dependencies": {
@@ -57,6 +58,7 @@
     "l": "^0.6.0",
     "less-loader": "^4.0.5",
     "modularscale-sass": "3.0.3",
+    "nvmrc-check": "^1.0.2",
     "postcss-loader": "^1.3.3",
     "postcss-url": "^5.1.2",
     "protractor": "~5.1.2",
