--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-jsonlint": "^1.2.1",
     "gulp-typescript-formatter": "^0.1.3",
     "gulp-watch": "^5.0.0",
     "js-beautify": "^1.7.5",
