--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "l": "^0.6.0",
     "less-loader": "^4.0.5",
     "modularscale-sass": "3.0.4",
+    "ngx-countdown": "^2.0.4",
     "nvmrc-check": "^1.0.2",
     "postcss-loader": "^2.0.10",
     "postcss-url": "^7.3.0",
