--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.2.4",
     "@angular/cli": "1.6.5",
     "@angular/common": "^5.2.1",
     "@angular/compiler": "^5.2.1",
@@ -22,6 +23,7 @@
     "@angular/forms": "^5.2.1",
     "@angular/http": "^5.2.1",
     "@angular/language-service": "^5.2.1",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.1",
     "@angular/platform-browser-dynamic": "^5.2.1",
     "@angular/router": "^5.2.1",
