--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^5.2.1",
     "@angular/platform-browser-dynamic": "^5.2.1",
     "@angular/router": "^5.2.1",
+    "@cloudinary/angular-4.x": "^1.1.0",
     "@nicky-lenaers/ngx-scroll-to": "0.6.0",
     "@types/jasmine": "~2.8.4",
     "@types/jasminewd2": "~2.0.3",
@@ -35,6 +36,7 @@
     "autoprefixer": "^7.2.5",
     "breakpoint-sass": "^2.7.1",
     "circular-dependency-plugin": "^4.4.0",
+    "cloudinary-core": "2.5.0",
     "codelyzer": "~4.1.0",
     "copy-webpack-plugin": "^4.3.1",
     "core-js": "^2.5.3",
