--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-loader": "^2.0.10",
     "postcss-url": "^7.3.0",
     "protractor": "~5.2.2",
+    "pug": "2.0.3",
     "pug-loader": "2.3.0",
     "raw-loader": "^0.5.1",
     "rxjs": "^5.5.6",
